# proyectoClarityBank

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  SPEC.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt
.github/workflows/: cd-cold-path.yml  cd-hot-path.yml  ci-cold-path.yml  ci-hot-path.yml  ci-mlops.yml  infra-deploy.yml
apps/banking-api/: Dockerfile  requirements.txt
apps/banking-web/: Dockerfile  index.html
apps/cold-path/: function_app.py  host.json  local.settings.json.example  requirements.txt
apps/hot-path/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/hot-path/scripts/: seed_cosmos_dev_data.py  train_dev_model.py
apps/hot-path/src/hot_path/: __init__.py  main.py
apps/hot-path/src/hot_path/api/: __init__.py  app.py
apps/hot-path/src/hot_path/api/routes/: __init__.py  classify.py  health.py
apps/hot-path/src/hot_path/consumers/: __init__.py  event_hub.py
apps/hot-path/src/hot_path/core/: __init__.py  azure_clients.py  config.py  logging.py  telemetry.py
apps/hot-path/src/hot_path/domain/: __init__.py  errors.py  models.py
apps/hot-path/src/hot_path/ml_assets/: .gitkeep
apps/hot-path/src/hot_path/repositories/: __init__.py  cosmos.py  feedback.py  profiles.py  transactions.py
apps/hot-path/src/hot_path/services/: __init__.py  anomaly.py  classifier_l1.py  classifier_l2.py  pipeline.py
apps/hot-path/tests/load/: locustfile.py
apps/hot-path/tests/unit/: test_anomaly.py  test_classifier_l1.py  test_classifier_l2.py  test_models.py  test_pipeline.py
docs/: data-model.md
(+31 files in other folders)
