[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hot-path"
version = "0.1.0"
description = "Hot-path transaction categorization service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic==2.9.*",
    "pydantic-settings==2.6.*",
    "azure-eventhub==5.12.*",
    "azure-eventhub-checkpointstoreblob-aio==1.2.*",
    "azure-cosmos==4.7.*",
    "azure-identity==1.19.*",
    "azure-keyvault-secrets==4.8.*",
    "azure-storage-blob==12.24.*",
    "httpx==0.27.*",
    "openai==1.54.*",
    "numpy>=1.26,<2.0",
    "fasttext==0.9.3",
    "orjson==3.10.*",
    "opentelemetry-api==1.27.*",
    "opentelemetry-sdk==1.27.*",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "azure-monitor-opentelemetry==1.6.*",
    "tenacity==9.0.*",
    "structlog==24.4.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*",
    "pytest-asyncio==0.24.*",
    "pytest-cov==5.0.*",
    "httpx==0.27.*",
    "ruff==0.7.*",
    "mypy==1.13.*",
    "pre-commit==4.0.*",
    "locust==2.32.*",
    "respx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/hot_path"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
